# YARGE

./: Cargo.toml  GUIDLINES.md  README.md  TODO.md
yarge/: Cargo.toml  build.rs
yarge/assets/shaders/: vk_tuto.slang
yarge/config/: Cargo.toml  build.rs
yarge/config/src/: config.rs  lib.rs  logger.rs  window.rs
yarge/core_layer/: Cargo.toml
yarge/core_layer/src/: core.rs  entry.rs  lib.rs
yarge/core_layer/src/application_layer/: application.rs  game.rs  mod.rs
yarge/core_layer/src/application_system/: application.rs  game.rs  mod.rs
yarge/core_layer/src/logger_system/: helpers.rs  logger.rs  mod.rs
yarge/error/: Cargo.toml
yarge/error/src/: error.rs  lib.rs  warnings.rs
yarge/macros/: Cargo.toml
yarge/macros/src/: lib.rs
yarge/maths/src/: lib.rs  types.rs
yarge/maths/src/vector/: mod.rs
yarge/platform/: Cargo.toml
yarge/platform/src/: lib.rs  log.rs  manager.rs  platform_manager.rs  window.rs
yarge/platform_layer/: Cargo.toml  build.rs
yarge/platform_layer/src/: lib.rs  platform.rs  window.rs
yarge/platform_layer/src/platform_impl/: mod.rs
yarge/src/: lib.rs
yarge/src/config/: application.rs  helper.rs  init.rs  logger.rs  mod.rs  renderer.rs  window.rs
yarge/src/core_layer/: core.rs  entry.rs  mod.rs
yarge/src/core_layer/application_system/: application.rs  game.rs  mod.rs
yarge/src/core_layer/file_system/: file.rs  mod.rs  ron.rs
yarge/src/core_layer/input_system/: gamepad.rs  keyboard.rs  mouse.rs
yarge/src/core_layer/logger_system/: helpers.rs  logger.rs  mod.rs
yarge/src/error/: errors.rs  mod.rs  warnings.rs
yarge/src/maths/: helpers.rs  mod.rs
yarge/src/maths/matrix/: mod.rs
yarge/src/maths/vector/: conversions.rs  impls.rs  mod.rs  tests.rs
yarge/src/platform_layer/: event.rs  mod.rs  platform.rs  window.rs
yarge/src/platform_layer/event/: mod.rs  (+2 more)
yarge/src/rendering_layer/: back_end.rs  bounding_volumes.rs  buffer.rs  graphics_pipeline.rs  mesh.rs  mod.rs  obj_loader.rs  renderer.rs  shaders.rs  types.rs  vertex.rs
yarge/test_bed/: Cargo.toml
yarge/test_bed/src/: main.rs
(+128 files in other folders)
