[package]
name = "yarge"
version = "0.1.0"
edition = "2024"

[dependencies]
xcb = { version = "1.7.0", optional = true, features = ["xlib_xcb"]}
x11 = { version = "2.21.0", optional = true }
ash = { version = "0.38.0", optional = true }
gl = { version = "0.14.0", optional = true }
colored = { version = "3.0.0", optional = true }
once_cell = { version = "1.21.3" }
serde = { version = "1.0.228", features = ["derive"] }
ron = { version = "0.12.0" }
macros = { path = "macros" }
downcast-rs = { version = "2.0.1" }
anymap = { version = "0.12.1" }


[build-dependencies]
cfg_aliases = "0.2.1"
pkg-config = "0.3.32"

[features]
default = ["xeleven", "opengl"]
# default = ["xeleven", "vulkan"]
xeleven = ["xcb", "x11", "colored"]
wayland = ["colored"]
directx = []
metal = []
opengl = ["gl"]
vulkan = ["ash"]
wgpu = []